# logger

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/log/: log.cpp  log.h
